# PoloniexLendingBot

./: .gitmodules  CMakeLists.txt  README.md
include/: PoloniexApi.hpp  PoloniexLendingBot.hpp  cpprest_utilities.hpp  logging.hpp
source/: CMakeLists.txt  PoloLendingBot.cpp
